syntax = "proto3";

package users;

service UsersService {
  rpc FindOne (UserById) returns (User);
  rpc FindMany (stream UserById) returns (stream User);
}

message UserById {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}